--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,3 @@
-spring.mvc.view.prefix=/pages/
-spring.mvc.view.suffix=.jsp
-application.message=Hello Phil
-
 spring.datasource.url=jdbc:mysql://localhost:3306/super?useUnicode=true&characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=root
@@ -44,3 +40,10 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
 multipart.maxFileSize=10MB
 multipart.maxRequestSize=10MB
+
+
+email.host=smtp.163.com
+email.port=25
+email.username=13936754903@163.com
+email.password=qwertyuiop5214
+email.encoding=UTF-8
