--- a/pom.xml
+++ b/pom.xml
@@ -189,6 +189,14 @@
             <artifactId>fastdfs-client-java</artifactId>
             <version>1.25</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.0</version>
+        </dependency>
+
     </dependencies>
 
     <!-- Package as an executable jar -->
