--- a/pom.xml
+++ b/pom.xml
@@ -197,6 +197,11 @@
             <version>2.8.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>commons-beanutils</groupId>
+            <artifactId>commons-beanutils-core</artifactId>
+            <version>1.8.3</version>
+        </dependency>
     </dependencies>
 
     <!-- Package as an executable jar -->
