--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/super?useUnicode=true&characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://123.206.100.60:3306/super?useUnicode=true&characterEncoding=UTF-8
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.initialSize=5
 spring.datasource.minIdle=5
