--- a/pom.xml
+++ b/pom.xml
@@ -203,6 +203,13 @@
             <version>1.8.3</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/javax.ws.rs/javax.ws.rs-api -->
+        <dependency>
+            <groupId>javax.ws.rs</groupId>
+            <artifactId>javax.ws.rs-api</artifactId>
+            <version>2.0.1</version>
+        </dependency>
+
         <dependency>
             <groupId>org.jeecg</groupId>
             <artifactId>easypoi-base</artifactId>
