--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -47,3 +47,6 @@ email.port=25
 email.username=13936754903@163.com
 email.password=qwertyuiop5214
 email.encoding=UTF-8
+
+image.save.position=D:\\ZhangLong\\super\\src\\main\\webapp\\image
+image.url=10.134.240.88:8090/image/
