--- a/pom.xml
+++ b/pom.xml
@@ -211,6 +211,12 @@
         </dependency>
 
         <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.3.2</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.jeecg</groupId>
             <artifactId>easypoi-base</artifactId>
             <version>2.3.1</version>
@@ -229,6 +235,11 @@
             <groupId>org.jeecg</groupId>
             <artifactId>easypoi-annotation</artifactId>
             <version>2.3.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpmime</artifactId>
+            <version>4.3.3</version>
         </dependency>
     </dependencies>
 
