--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -51,3 +51,5 @@ image.save.position=D:\\ZhangLong\\super\\src\\main\\webapp\\image
 image.url=10.134.240.88:8090/image/
 
 excel.save.position=D:\\ZhangLong\\super\\src\\main\\webapp\\excel
+
+avatar.url=10.134.240.88:8090/image/default.jpg
