--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -41,7 +41,16 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 multipart.maxFileSize=10MB
 multipart.maxRequestSize=10MB
 
-
+spring.http.multipart.enabled=true
+#默认支持文件上传.
+spring.http.multipart.file-size-threshold=0
+#支持文件写入磁盘.
+spring.http.multipart.location=
+#上传文件的临时目录
+spring.http.multipart.max-file-size=1Mb
+#最大支持文件大小
+spring.http.multipart.max-request-size=10Mb
+#最大支持请求大小
 email.host=smtp.163.com
 email.port=25
 email.username=13936754903@163.com
