--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -44,9 +44,11 @@ email.username=13936754903@163.com
 email.password=qwertyuiop5214
 email.encoding=UTF-8
 image.save.position=D:\\ZhangLong\\super\\src\\main\\webapp\\image
-image.url=10.134.240.88:8090/image/
+image.url=/image/
 
 excel.save.position=D:\\ZhangLong\\super\\src\\main\\webapp\\excel
 
-avatar.url=10.134.240.88:8090/image/default.jpg
+avatar.url=/image/default.jpg
+
+ip=10.134.240.210:8090
 
